@@ -1,6 +1,11 @@
 Changes
 =======
 
+Next
+----
+- Add single metadata item accessors to fio inf (#142).
+- Move fio to setuptools entry point (#142).
+
 1.2.0 (2014-09-02)
 ------------------
 - Always show property width and precision in schema (#123).
